# deepagents-quickstarts

./: .cursorrules  QUICKSTART.md  README.md  ROOT_CAUSE_ANALYSIS.md  THREAD_CREATION_ROOT_CAUSE.md  THREAD_PERSISTENCE_ANALYSIS.md  run_dev.py  run_dev.sh  setup_dev.sh
deep_research/: .dockerignore  .env.example  BUILD_GUIDE.md  Dockerfile  README.md  agent.py  build.sh  check_langsmith.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_langgraph.py  run_langgraph.sh
deep_research/docs/: api_usage.md  jwt_setup.md
deep_research/research_agent/: __init__.py  lightrag_client.py  prompts.py  tools.py
deep_research/research_service/: README.md  __init__.py  generate_proto.sh  main.py  run.py  schemas.py  service.py  (+1 more)
thread_service/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  run.py
thread_service/migrations/: env.py
thread_service/migrations/versions/: 20241120_0001_initial.py  20251120_232056_add_users.py  20251121_0001_fix_null_user_id_threads.py
thread_service/tests/: conftest.py  test_auth.py  test_grpc.py  test_integration.py  test_middleware.py  test_models.py  test_repositories.py  test_rest_api.py  test_schemas.py
thread_service/thread_service/: __init__.py  auth.py  db.py  email.py  main.py  middleware.py  models.py  repositories.py  schemas.py  settings.py
thread_service/thread_service/api/: __init__.py  auth.py  grpc.py  rest.py
thread_service/thread_service/proto/: __init__.py  thread_service.proto  thread_service_pb2.py  thread_service_pb2_grpc.py
(+13 files in other folders)
